test/Fail/WrongSharpArity.err
WrongSharpArity.agda:18.10-12: error: [WrongSharpArity]
♯_ must be applied to exactly one argument
when checking that the expression ♯_ has type Set → ∞ Set
